--- a/service.main/appsettings.Development.json
+++ b/service.main/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "User Id=postgres;Password=root;Server=localhost;Port=5432;Database=testTaskDex"
   }
 }
