--- a/service.main.domain/service.main.domain.csproj
+++ b/service.main.domain/service.main.domain.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.10" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Domain" />
+    </ItemGroup>
+
 </Project>
