--- a/src/Services/TestTaskService/TestTaskService.Domain/TestTaskService.Domain/TestTaskService.Domain.csproj
+++ b/src/Services/TestTaskService/TestTaskService.Domain/TestTaskService.Domain/TestTaskService.Domain.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Domain" />
+      <Folder Include="Entities" />
     </ItemGroup>
 
 </Project>
