container local database

--- a/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.Development.json
+++ b/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User Id=postgres;Password=root;Server=localhost;Port=5432;Database=testTaskDex"
+    "DefaultConnection": "Host=database;Database=postgres;Username=postgres;Password=postgres;"
   }
 }
