--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,29 @@
 version: '3.4'
 
+networks:
+  dev:
+    driver: bridge
+
 services:
   TestTaskService.Api:
-    image: ${DOCKER_REGISTRY-}taskdexapi
+    image: ${DOCKER_REGISTRY-}test-task-service.api
+    depends_on:
+      - "database"
+    container_name: test-task-service
+    ports:
+      - 5009:80
     build:
       context: .
       dockerfile: src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/Dockerfile
+    environment:
+      - DefaultConnection=Host=database;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;
+    networks:
+      - dev
+
   database:
     image: postgres
     restart: always
+    container_name: database
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -16,6 +31,9 @@ services:
       - "5432:5432"
     volumes:
       - ./pgdata:/var/lib/postgresql/data
+    networks:
+      - dev
+
   adminer:
     image: adminer
     restart: always
