--- a/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.json
+++ b/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=database;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;"
+  }
 }
