--- a/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/TestTaskService.Api.csproj
+++ b/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/TestTaskService.Api.csproj
@@ -9,6 +9,14 @@
         <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DocumentationFile>bin\Debug\TestTaskService.Api.xml</DocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>bin\Release\TestTaskService.Api.xml</DocumentationFile>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.8" />
