--- a/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.Development.json
+++ b/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=database;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;"
+    "DefaultConnection": "Host=localhost;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;"
   }
 }
