--- a/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.json
+++ b/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=database;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;"
+    "DefaultConnection": "Host=localhost;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;"
   }
 }
