--- a/tools/TestTaskDex.Migrator/appsettings.json
+++ b/tools/TestTaskDex.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Host=database;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;"
+        "DefaultConnection": "Host=localhost;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;"
     }
 }
