--- a/src/Services/TestTaskService/TestTaskService.Application/TestTaskService.Application/TestTaskService.Application.csproj
+++ b/src/Services/TestTaskService/TestTaskService.Application/TestTaskService.Application/TestTaskService.Application.csproj
@@ -16,7 +16,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\TestTaskService.Domain\TestTaskService.Domain\TestTaskService.Domain.csproj" />
-      <ProjectReference Include="..\..\TestTaskService.Infrastructure\TestTaskService.Infrastructure\TestTaskService.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Interfaces" />
     </ItemGroup>
 
 </Project>
