--- a/src/Services/TestTaskService/TestTaskService.Infrastructure/TestTaskService.Infrastructure/TestTaskService.Infrastructure.csproj
+++ b/src/Services/TestTaskService/TestTaskService.Infrastructure/TestTaskService.Infrastructure/TestTaskService.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\TestTaskService.Application\TestTaskService.Application\TestTaskService.Application.csproj" />
       <ProjectReference Include="..\..\TestTaskService.Domain\TestTaskService.Domain\TestTaskService.Domain.csproj" />
     </ItemGroup>
 
