--- a/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.Development.json
+++ b/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;"
+  },
+  "FirebaseStorage" : {
+    "Bucket": "fleetfinder-b0918.appspot.com"
   }
 }
