--- a/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.json
+++ b/src/Services/TestTaskService/TestTaskService.Api/TestTaskService.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=postgres;Username=postgres;Password=postgres;Port=5432;Pooling=true;"
+  },
+  "FirebaseStorage" : {
+    "Bucket": "testtaskdex.appspot.com"
   }
 }
