--- a/src/Services/TestTaskService/TestTaskService.Infrastructure/TestTaskService.Infrastructure/TestTaskService.Infrastructure.csproj
+++ b/src/Services/TestTaskService/TestTaskService.Infrastructure/TestTaskService.Infrastructure/TestTaskService.Infrastructure.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
     </ItemGroup>
